rusqlite/libsqlite3-sys/src/bindgen.rs

    pub fn sqlite3_system_errno(arg1: *mut sqlite3) -> ::std::os::raw::c_int;
    pub fn sqlite3_snapshot_get(db: *mut sqlite3,
                                zSchema: *const ::std::os::raw::c_char,
                                ppSnapshot: *mut *mut sqlite3_snapshot)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_snapshot_open(db: *mut sqlite3,
                                 zSchema: *const ::std::os::raw::c_char,
                                 pSnapshot: *mut sqlite3_snapshot)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_snapshot_free(arg1: *mut sqlite3_snapshot);
    pub fn sqlite3_snapshot_cmp(p1: *mut sqlite3_snapshot,
                                p2: *mut sqlite3_snapshot)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_rtree_geometry_callback(db: *mut sqlite3,
                                           zGeom:
                                               *const ::std::os::raw::c_char,
                                           xGeom:
                                               ::std::option::Option<unsafe extern "C" fn(arg1:
                                                                                              *mut sqlite3_rtree_geometry,
                                                                                          arg2:
                                                                                              ::std::os::raw::c_int,
                                                                                          arg3:
                                                                                              *mut sqlite3_rtree_dbl,
                                                                                          arg4:
                                                                                              *mut ::std::os::raw::c_int)
                                                                         ->
                                                                             ::std::os::raw::c_int>,
                                           pContext:
                                               *mut ::std::os::raw::c_void)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_rtree_query_callback(db: *mut sqlite3,
                                        zQueryFunc:
                                            *const ::std::os::raw::c_char,
                                        xQueryFunc:
                                            ::std::option::Option<unsafe extern "C" fn(arg1:
                                                                                           *mut sqlite3_rtree_query_info)
                                                                      ->
                                                                          ::std::os::raw::c_int>,
                                        pContext: *mut ::std::os::raw::c_void,
                                        xDestructor:
                                            ::std::option::Option<unsafe extern "C" fn(arg1:
                                                                                           *mut ::std::os::raw::c_void)>)
     -> ::std::os::raw::c_int;
}
